# bn3

./: README.md  TLDR.md  build.jl  buildblunux.sh  buildblunux_kr.sh  buildblunux_sv.sh  config.toml  deploy_ventoy.sh  setup.sh
installer/: CMakeLists.txt
installer-rs/: Cargo.toml
installer-rs/src/: config.rs  disk.rs  installer.rs  main.rs  tui.rs
installer/include/: config.hpp  disk.hpp  installer.hpp  tui.hpp
installer/src/: config.cpp  disk.cpp  installer.cpp  main.cpp  tui.cpp
profile_base/airootfs/etc/: hostname  hosts  mkinitcpio.conf  resolv.conf
profile_base/airootfs/etc/sudoers.d/: live
profile_base/airootfs/etc/systemd/system/: pacman-init.service
profile_base/airootfs/etc/systemd/system-preset/: 99-blunux.preset
profile_base/airootfs/usr/share/applications/: install-blunux.desktop
src/: archiso.jl  build_id.jl  installer_build.jl  locale.jl  packages.jl
