[package]
name = "blunux-installer"
version = "1.0.0"
edition = "2021"
description = "Blunux System Installer - Arch Linux + KDE Plasma"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
nix = { version = "0.29", features = ["fs", "mount", "term"] }
libc = "0.2"

[profile.release]
opt-level = 2
strip = true
lto = true
